--- a/tex/experiment.tex
+++ b/tex/experiment.tex
@@ -16,14 +16,14 @@ is a circular proton-proton ($pp$) collider.
 It consists of a 27~km ring of superconducting magnets and
 accelerating cavities, where two beams of protons circulate in
 opposite directions.
-The magnets maintain the protons into a focused circular trajectory while radio-frequency
+The magnets bend and focus the proton beams into a circular trajectory while radio-frequency
 cavities boost their energy.
-The beam undergo several acceleration steps, in the pre-accelerators chain
-and in the LHC, which are part of the CERN accelerator complex, shown in fig.~\ref{fig:lhc}.
+The beams undergo several acceleration steps in the pre-accelerators chain
+and in the LHC, which are both part of the CERN accelerator complex, shown in Fig.~\ref{fig:lhc}.
 Protons from the ionization of hydrogen atoms are first accelerated to \mbox{$50 \MeV$}
 in a linear collider~(LINAC2), then the energy is increased up to
 \mbox{$450 \GeV$} through three stages of synchrotrons: the Proton
-Synchrotron Booster~(BOOSTER), the Proton Synchrotron~(PS) and the Super Proton Synchrotron~(SPS)
+Synchrotron Booster~(BOOSTER), the Proton Synchrotron~(PS) and the Super Proton Synchrotron~(SPS).
 Finally the protons are injected into the LHC.
 
 \begin{figure}[h]
@@ -38,7 +38,7 @@ Finally the protons are injected into the LHC.
  
 In 2011 each beam was accelerated to an energy of \mbox{$3.5 \TeV$}, 
 resulting into a center-of-mass energy \mbox{$\sqrt{s} = 7 \TeV$}.
-In 2012, the beam energy has been increased to \mbox{$4 \TeV$}, 
+In 2012, the beam energy was increased to \mbox{$4 \TeV$}, 
 corresponding to \mbox{$\sqrt{s} = 8 \TeV$}.
 The LHC was designed to collide protons up to \mbox{$\sqrt{s} = 14 \TeV$},
 which is expected for future operation.
@@ -52,7 +52,7 @@ ATLAS, described in Sec.~\ref{sec:ATLAS}, CMS~\cite{cms}, ALICE~\cite{alice} and
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.58\textwidth, angle=270]{figures/experiment/atlas_overview}
+\includegraphics[width=0.58\textwidth]{figures/experiment/atlas_overview}
 \caption[Drawing of the ATLAS detector]{
   Drawing of the ATLAS detector showing the different detectors and magnet systems.}
 \label{fig:ATLAS}
@@ -71,7 +71,7 @@ The sub-detectors are grouped into three main systems:
 
 \begin{itemize}
 \item The Inner Detectors, described in Sec.~\ref{sec:ID}, immersed in
-  the solenoidal magnetic field, constitute a tracking system used to
+  a solenoidal magnetic field, constitute a tracking system used to
   identify and measure the momenta of charged particles, and to identify
   the interaction vertices and displaced vertices. 
 \item The Calorimeters are used to identify and measure the energy of
@@ -82,8 +82,8 @@ The sub-detectors are grouped into three main systems:
 \item The Muon system is described in
   Sec~\ref{sec:muonspectrometer}. Because muons minimally interact
   with the other parts of the detector and have long lifetimes, they
-  are detected with a muon spectrometer on the outermost detector
-  layer, immersed in the toroidal magnetic field. 
+  are identified and measured in the outermost detector
+  layer, which consists of muon spectrometers immersed in a toroidal magnetic field. 
 \end{itemize}
 
 In events with a Top quark pair decaying semileptonically, electrons
@@ -92,51 +92,61 @@ are identified by the tracking and muon systems, and the transverse
 components of the neutrino momenta are inferred from the imbalance in
 the total momenta measured in the detector.
 
+
 \subsection{Inner detectors}
 \label{sec:ID}
 
 \begin{figure}[h]
 \centering
-%\includegraphics[width=0.36\textwidth, angle=270]{figures/experiment/InnerDetector}
-%\includegraphics[width=0.34\textwidth, angle=270]{figures/experiment/InnerDetectorCut}
+\includegraphics[width=0.4\textwidth]{figures/experiment/in_det}
+\includegraphics[width=0.3\textwidth]{figures/experiment/in_det_dist}
 \caption[Overview of the Inner Detector]{
-  Overview of the Inner Detector~\cite{detectorpaper}:
-  the left figure shows a longitudinal section of the Inner Detector with the different subdetectors.
-  The right figure shows a transverse section and illustrates the distances of the different detector layers from the beam line.}
+  Overview of the Inner Detector: 
+  the left figure shows a longitudinal section of the Inner Detector
+  with the different sub-detectors.
+  The right figure shows a transverse section and illustrates the
+  distances of the different detector layers from the beam line.}
 \label{fig:ID}
 \end{figure}
 
-The ATLAS Inner Detector (ID) consists of three subdetector systems:
-the Pixel detector and the Semiconductor Tracker~(SCT), which use silicon semiconductor
-technology, and the Transition Radiation Tracker~(TRT), which exploits the transition radiation produced in a gas mixture of Xe, CO$_2$ and O$_2$.
+The ATLAS Inner Detector (ID) consists of three sub-detector systems:
+the Pixel detector and the SemiConductor Tracker~(SCT), which use silicon semiconductor
+technology, and the Transition Radiation Tracker~(TRT), 
+which exploits the transition radiation produced in a gas mixture of Xe, CO$_2$ and O$_2$.
 Fig.~\ref{fig:ID} shows a longitudinal and a transverse section of the ID.
-In particular, the distances of the different subdetector layers from the beam line are illustrated.
-The whole ID is embedded in a \mbox{$2 \T$} solenoidal field (Sec.~\ref{sec:magnets}).
+The whole ID is immersed in a \mbox{$2 \T$} solenoidal field (Sec.~\ref{sec:magnets}).
 
-With three concentric cylinders~(barrel part) and three endcap disks, perpendicular to the beam axis, the Pixel detector
-covers a range\footnote{ATLAS uses a right-handed coordinate system with its origin at the nominal interaction point (IP) in the centre
-  of the detector and the $z$-axis along the beam pipe. The $x$-axis points from the IP to the centre of the LHC ring, and the $y$-axis points
-  upwards. Cylindrical coordinates ($r$, $\phi$) are used in the transverse plane, where $\phi$ is the azimuthal angle around the beam pipe. The
-  pseudorapidity is defined in terms of the polar angle $\theta$ as \mbox{$\eta = - \ln \left[ \tan \left( \frac{\theta}{2} \right) \right]$}.} of
-\mbox{$|\eta| < 2.5$}.
-Each of the 1744 sensors consists of a segmented silicon wafer with pixels of minimum area \mbox{$50 \times 400 \mum^2$} and 46080 readout channels.
-The innermost pixel layer, the so-called $b$-layer, is as close to the beam line as \mbox{$50.5 \mm$} and allows for a precise extrapolation of tracks
+With three concentric cylinders~(barrel part), and three endcap disks
+perpendicular to the beam axis, the Pixel detector covers a
+range\footnote{ATLAS uses a right-handed coordinate system
+  with its origin at the nominal interaction point (IP) in the centre
+  of the detector and the $z$-axis along the beam pipe. 
+  The $x$-axis points from the IP to the centre of the LHC ring, and the $y$-axis points
+  upwards. Cylindrical coordinates ($r$, $\phi$) are used in the
+  transverse plane, where $\phi$ is the azimuthal angle around the beam pipe. The
+  pseudorapidity is defined in terms of the polar angle $\theta$ as 
+  \mbox{$\eta = - \ln \left[ \tan \left( \frac{\theta}{2} \right)
+    \right]$}.} of \mbox{$|\eta| < 2.5$}.
+Each of the 1744 sensors consists of a segmented silicon wafer with
+pixels of minimum area \mbox{$50 \times 400 \mum^2$} and 46080 readout channels.
+The innermost pixel layer, called $b$-layer, is as close to the beam
+line as \mbox{$50.5 \mm$} and allows for a precise extrapolation of tracks
 to the vertices.
-This is crucial for any $b$-tagging strategy based on impact parameters and the identification of secondary vertices.
+This is crucial for the identification of displaced secondary vertices.
 
 The SCT consists of four layers in the barrel and nine endcap disks.
 It covers the range \mbox{$|\eta| < 2.5$}.
-The sensors use silicon microstrip technology with a strip pitch of \mbox{$80 \mum$}.
-In the barrel, the strips are arranged parallel to the beam line, while in the disks, the strips are oriented radially.
+In the barrel, silicon strips are arranged parallel to the beam line, while in the disks, the strips are oriented radially.
 Modules are arranged back-to-back with a small stereo angle of \mbox{$40 \mrad$} to allow for a measurement of the azimuth angle in each layer.
 A typical track yields three space-points in the Pixel detector and eight in the SCT.
 Together, the silicon trackers ensure the measurement of the track momenta and the identification of primary and secondary vertices.
 
-In the barrel part of the TRT, there are 73 planes of straw tubes filled with gas, which are arranged parallel to the beam axis.
+In the barrel part of the TRT, there are 73 planes of straw tubes
+filled with gas mixture, which are arranged parallel to the beam axis.
 In the endcap, there are 160 straw planes, oriented radially.
-The TRT covers a range of \mbox{$|\eta| < 2.0$}, in which the separation of electrons from charged pions is improved by exploiting transition radiation.
-Although the TRT does not provide track information in the direction along the beam line, pattern recognition and the measurement of the track momenta
-become more robust by using the signals from the TRT.
+The TRT covers a range of \mbox{$|\eta| < 2.0$}, 
+in which the separation of electrons from charged pions
+is improved by exploiting transition radiation.
 
 The total amount of material of the ID is as large as roughly 0.5 electromagnetic radiation
 lengths\footnote{The radiation length is defined as the typical amount of material traversed by an electron after which it has lost
@@ -144,187 +154,186 @@ $\frac{1}{e}$ of its original energy by bremsstrahlung.}
 $X_0$ for \mbox{$|\eta| < 0.6$}.
 For \mbox{$0.6 < |\eta| < 1.37$} and \mbox{$1.52 < |\eta| < 2.5$}, the amount of material reaches up to \mbox{$1.5 X_0$}.
 In the barrel-to-endcap transition region at \mbox{$1.37 < |\eta| < 1.52$}, the amount of material is even larger.
-Electrons and photons in this region were not taken into account in this analysis.
-A particular consequence of the sizable amount of material in front of the calorimeters is that a large fraction of photons convert into \mbox{$e^+e^-$}
-pairs in the ID volume.
+Electrons in this region were not taken into account in this analysis.
 
 \subsection{Calorimeters}
 \label{sec:calorimeter}
 
 Fig.~\ref{fig:calorimeters} shows an overview of the different electromagnetic and hadronic calorimeters of the ATLAS detector.
-All calorimeters are sampling calorimeters consisting of alternating layers of dense absorber material and active material, where only the active
-material is used for the energy measurement.
-This design allows for a compact size of the calorimeter system.
 
-The hadronic calorimeter in the barrel~(Tile) uses steel as absorber and scintillators as active material.
-All other calorimeters use liquid argon~(LAr) technology with different types of absorbers:
-lead in the electromagnetic barrel~(EMB) and the electromagnetic endcap calorimeter (EMEC),
-copper in the hadronic endcap calorimeter~(HEC) and the electromagnetic part of the Forward Calorimeter~(FCal),
+The ATLAS electromagnetic and hadronic calorimeters are sampling
+calorimeters consisting of alternating layers of dense absorber
+material and active material, where only the active
+material is used for the energy measurement.
+
+The hadronic calorimeter in the barrel~(Tile) uses steel as absorber
+and scintillators as active material.
+The electromagnetic and the forward hadronic calorimeters use Liquid
+Argon~(LAr) technology with different types of absorbers:
+lead in the ElectroMagnetic Barrel~(EMB) and the ElectroMagnetic
+Endcap Calorimeter (EMEC), copper in the Hadronic Endcap
+Calorimeter~(HEC) and the electromagnetic part of the Forward Calorimeter~(FCal),
 and tungsten in the hadronic part of the FCal.
 The LAr calorimeters are placed in three cryostats: one for the barrel and one for each endcap.
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.4\textwidth, angle=270]{figures/experiment/Calorimeters}
+\includegraphics[width=0.4\textwidth]{figures/experiment/calorimeters}
 \caption[Overview of the calorimeter system]{
-  Overview of the calorimeter system~\cite{detectorpaper}:
+  Overview of the calorimeter system:
   the different subdetectors of the electromagnetic and hadronic calorimeter are shown.}
 \label{fig:calorimeters}
 \end{center}
 \end{figure}
 
-The technologies have been chosen to provide fast readout, radiation hardness and high containment of electromagnetic and hadronic showers to ensure
+The materials have been chosen to provide fast readout, 
+radiation hardness, and high containment of electromagnetic and
+hadronic showers to ensure
 a precise measurement of their energies.
-The energy flux is varying in the different detector regions.
-Especially in the very forward region, which is covered by the FCal (\mbox{$3.1 < |\eta| < 4.9$}), extremely high fluxes from minimum bias events
-drove the design towards dense absorber material and small LAr gaps.
 
-All calorimeters are finely granulated and also segmented longitudinally to allow for a precise determination of the position of the showers and to
+All calorimeters are finely granulated and also segmented
+longitudinally to allow for a precise determination of the position of the showers and to
 distinguish different shower types by the use of shower shapes.
-This is particularly important for the central region, which is devoted to precision measurements of electrons and photons:
-the EMB (\mbox{$|\eta| < 1.475$}) is segmented into three longitudinal layers, where the first layer, the so-called LAr strips, provide
-a very fine granularity in $\eta$ of 0.0031.
-To ensure continuous coverage in azimuth and to enable fast readout, the lead absorbers are folded into an accordion shaped structure.
+This is particularly important for the central region, 
+which is devoted to precision measurements of electrons and photons:
+the EMB (\mbox{$|\eta| < 1.475$}) is segmented into three longitudinal
+layers, where the first layer $\eta$ granularity is 0.0031.
+To ensure continuous coverage in azimuth and to enable fast readout, 
+the lead absorbers are folded into an accordion shaped structure.
 
-A similar design as for the EMB has been used for the EMEC, which is divided into two wheels covering the ranges \mbox{$1.375 < |\eta| < 2.5$}
+A similar design as for the EMB has been used for the EMEC, 
+which is divided into two wheels covering the ranges \mbox{$1.375 < |\eta| < 2.5$}
 and \mbox{$2.5 < |\eta| < 3.2$}.
-The inner wheel has a coarser granularity in $\eta$ and $\phi$, limiting the region devoted to precision physics to \mbox{$|\eta| < 2.5$}.
-A thin LAr layer (presampler) is placed in front of the EMB and the EMEC for \mbox{$|\eta| < 1.8$} to correct for energy lost in front of the calorimeter.
+The inner wheel has a coarser granularity in $\eta$ and $\phi$, 
+limiting the region devoted to precision physics to \mbox{$|\eta| < 2.5$}.
+A thin LAr layer (pre-sampler) is placed in front of the EMB and the
+EMEC at \mbox{$|\eta| < 1.8$} to correct for energy lost in front of the calorimeter.
 
 The Tile calorimeter is located behind the EMB and the EMEC and is divided into three longitudinal layers.
 It consists of a central barrel (\mbox{$|\eta| < 1.0$}) and an extended-barrel part (\mbox{$0.8 < |\eta| < 1.7$}).
-The radial depth is about 7.4 nuclear interaction
-lengths\footnote{The nuclear interaction length $\lambda_I$ for hadrons is defined in analogy to the electromagnetic radiation length $X_0$
-for electrons and photons.} ($\lambda_I$).
 
 The HEC is a traditional LAr sampling calorimeter covering the region (\mbox{$1.5 < |\eta| < 3.2$}), which is placed behind the EMEC in the same
 cryostat.
 It consists of two independent wheels, each of which is divided longitudinally into two parts.
 
-%The design energy resolution for electrons and jets are summarised in Tab.~\ref{tab:designresolution}.
-Altogether, the calorimeters cover the range \mbox{$|\eta| < 4.9$} and, thus, provide good hermiticity to ensure also a precise measurement
+Altogether, the calorimeters cover the range \mbox{$|\eta| < 4.9$},
+thus providing enough hermeticity to ensure a precise measurement
 of the imbalance of the transverse momentum.
-Over the whole range in $\eta$, the total thickness of the calorimeter system is approximately \mbox{$10 \lambda_I$}, ensuring good containment of
-electromagnetic and hadronic showers and limiting punch-through effects to the muon spectrometer.
+Over the whole range in $\eta$, the total thickness of the calorimeter
+system ensures a good containment of
+electromagnetic and hadronic showers and limits punch-through effects to the muon spectrometer.
 
 \subsection{Muon detectors}
 \label{sec:muonspectrometer}
 
-The ATLAS muon system covers the range \mbox{$|\eta| < 2.7$} and is designed to measure the momenta of muons exiting the calorimeter system starting
-at energies above \mbox{$\sim 3 \GeV$}.
-The tracks of the muons are bent by the magnetic field of the air-core toroid system in the barrel and in the endcaps (Sec.~\ref{sec:magnets}).
-The fields in the barrel and in the endcaps are oriented such that muon tracks in both regions are mostly orthogonal to the field lines.
+The ATLAS muon system covers the range \mbox{$|\eta| < 2.7$}
+and is designed to measure the momenta of muons with energy 
+above \mbox{$\sim 3 \GeV$}.
+The tracks of the muons are bent by the toroidal magnetic field,
+whose orientation is such that muon tracks in both barrel and endcaps 
+are mostly orthogonal to the field lines.
 
-An overview of the different subsystems is shown in Fig.~\ref{fig:muons}:
-the muon system consists of high-precision tracking chambers as well as trigger systems.
-In the barrel part, Monitored Drift Tubes~(MDTs) are used for tracking and Resistive Plate Chambers~(RPCs) for triggering (Sec.~\ref{sec:triggerDAQ}).
+The muon system, shown in Fig.~\ref{fig:muons}, consists of high-precision tracking chambers as well as trigger systems.
+In the barrel part, Monitored Drift Tubes~(MDTs) are used for tracking and Resistive Plate Chambers~(RPCs) for triggering.
 In the endcaps, tracking information is provided by Cathode Strip Chambers~(CSCs) and Thin Gap Chambers~(TGCs) are used for triggering.
 In the barrel as well as in the endcaps, muons typically cross three longitudinal layers of the muon spectrometer.
 The muon system is divided into eight octants with overlaps in $\phi$ to avoid gaps in the detector coverage.
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.4\textwidth, angle=270]{figures/experiment/MuonChambers}
+\includegraphics[width=0.4\textwidth]{figures/experiment/muonchambers}
 \caption[Overview of the muon system]{
-  Overview of the muon system~\cite{detectorpaper}:
+  Overview of the muon system:
   the different types of tracking and trigger chambers are shown.}
 \label{fig:muons}
 \end{center}
 \end{figure}
 
-The technologies for the tracking systems have been chosen such that high precision can be achieved given the level of the particle flux.
+The technologies for the tracking systems have been chosen according to
+level of particle flux.
 The MDTs in the barrel part follow a robust and reliable detector design.
-Since each tube contains only one sense wire, the simple geometry allows for the prediction of deformations as well as for a precise reconstruction.
-As the particle flux is increasing with $|\eta|$, the CSCs are more suited for the endcap region:
-the higher granularity of the multiwire proportional chambers facilitates to cope with the increasing rates.
+Since each tube contains only one sense wire, the simple geometry
+allows for the prediction of deformations as well as for a precise reconstruction.
+As the particle flux is increasing with $|\eta|$, 
+the CSCs are more suited for the endcap region:
+the higher granularity of the multi-wire proportional chambers 
+facilitates to cope with the increasing rates.
 
-The choice of the technologies for the trigger chambers was driven by the requirement for fast and highly efficient trigger capabilities
+The choice of the technologies for the trigger chambers was driven 
+by the requirement for fast and highly efficient trigger capabilities
 given the different conditions present in the barrel and endcap regions during data taking.
 Additionally, an adequate resolution of the transverse momentum of the tracks was required.
 In the barrel, RPCs provide good spatial and time resolution.
-In the endcap regions, however, higher particle fluxes as well as the need for a higher granularity required a different
-technology: TGCs are used for the region \mbox{$1.05 < |\eta| < 2.4$}.
-They are based on the same principle as multiwire proportional chambers and fulfil the needs in terms of rate capability and granularity.
-With RPCs and TGCs, a time resolution of \mbox{$15 - 25 \ns$} can be achieved, which is sufficient for fast trigger decisions and a good association of
+However, in the region \mbox{$1.05 < |\eta| < 2.4$}  the particle flux
+is higher and TGCs, with higher granularity, are used.
+With RPCs and TGCs, a time resolution of \mbox{$15 - 25 \ns$} can be
+achieved, 
+which is sufficient for fast trigger decisions and a good association of
 tracks to bunch crossings.
-
-The benchmark for the tracking performance of the muon spectrometer is set by a 10\% resolution on the transverse momentum of \mbox{$1 \TeV$}
-muons~\cite{detectorpaper}.
-To achieve this goal, the position of the MDT wires and the CSC strips must be known with a precision better than \mbox{$30 \mum$}.
-Therefore, a high-precision optical alignment system was set up to monitor the relative position of the MDT chambers and their internal deformations.
 
 \subsection{Magnet system}
 \label{sec:magnets}
 
-The ATLAS magnetic system consists of four large superconducting magnets: a central solenoid and three toroid magnets in the barrel and the
-two endcaps.
-A sketch of the magnet system is shown in Fig.~\ref{fig:magnets}.
-The solenoid and the toroids are shown, as well as the tile calorimeter.
+The ATLAS magnets system consists of four superconducting
+magnets: a central solenoid and three toroid magnets in the barrel and the
+two endcaps (Fig.~\ref{fig:magnets}).
 
 The central solenoid provides an axial field with a strength of \mbox{$2 \T$}.
-The magnetic flux is returned by the tile calorimeter and its girder structure.
-The solenoid was designed to be particularly lightweight and to minimise the amount of material in front of the calorimeter system
-to which it contributes only a total of 0.66 electromagnetic radiation lengths.
+The solenoid was designed to be particularly lightweight and to
+minimise the amount of material in front of the calorimeter system.
 
 \begin{figure}[h]
-\centering
-  \begin{minipage}[t][0.55\textwidth][b]{0.45\textwidth}
-  %\includegraphics[width=0.9\textwidth, angle=270]{figures/experiment/Magnets}
-  \caption[Sketch of the magnet system]{
-    Sketch of the magnet system~\cite{detectorpaper}:
-    the solenoid and the toroids are shown, as well as the tile calorimeter.}
-  \label{fig:magnets}
-  \end{minipage}
-  \hspace{1cm}
-  \begin{minipage}[t][0.55\textwidth][b]{0.45\textwidth}
-  %\includegraphics[width=0.9\textwidth]{figures/experiment/TrigLevels}
-  \caption[Sketch of the trigger chain]{
-    Sketch of the trigger chain and the different trigger levels~\cite{ATLASTDR}.
-    The indicated rates are orders of magnitude only.
-  }
-  \label{fig:triggerdaq}
-  \end{minipage}
+\begin{center}
+\includegraphics[width=0.4\textwidth]{figures/experiment/magnets}
+\caption[Overview of the magnet system]{
+  Overview of the magnet system:
+  the solenoid and the toroids are shown.}
+\label{fig:magnets}
+\end{center}
 \end{figure}
 
-The toroid systems provide magnetic fields with a bending power of \mbox{$1.5 - 5.5 \Tm$} in the barrel and \mbox{$1 - 7.5 \Tm$} in the endcap regions.
-Each system consists of eight air-core coils placed in aluminium housings.
-The toroidal fields contain non-uniformities which need to be known to high precision to allow for an accurate measurement of muon momenta.
-Hence, 1800 Hall sensors were installed in the muon spectrometer volume to enable the monitoring of the magnetic field.
+The toroid systems provide magnetic fields with a bending power
+of \mbox{$1.5 - 5.5 \Tm$} in the barrel and \mbox{$1 - 7.5 \Tm$} in the endcap regions.
+Each system consists of eight coils placed in aluminium housings.
+The toroidal fields contain non-uniformities which need to be known to
+high precision to allow for an accurate measurement of muon momenta.
+Hence, 1800 Hall sensors were installed in the muon spectrometer 
+volume to enable the monitoring of the magnetic field.
 
 
 \subsection{Trigger and data acquisition}
 \label{sec:triggerDAQ}
 
-Assuming a bunch spacing of \mbox{$25 \ns$} and approximately 20 inelastic interactions per bunch crossing\footnote{As mentioned in Sec.~\ref{sec:LHC}, in 2011 most of the data was taken with a bunch-spacing of \mbox{$50 \ns$}.}, the event rate at the ATLAS detector is
-of the order of 1~GHz.
-A three-level trigger system was set up to reduce this rate to about 200~Hz.
-In 2011 data taking, the real trigger rate was indeed of the order of 300~Hz~\cite{fournier}.
-The triggers need to suppress minimum bias events very strongly while efficiently selecting rare physics events.
-The data acquisition system~(DAQ) gathers the data from the different detector subsystems and buffers them until a trigger decision is received.
-When the event is not rejected by one of the trigger levels, the data are recorded permanently.
-Fig.~\ref{fig:triggerdaq} shows a sketch of the ATLAS trigger chain indicating the order of magnitude of the trigger rates at the different trigger
-levels.
-
-The first trigger level~(L1) is a hardware-based trigger, which reduces the event rate to approximately 75~kHz.
-Muons, electrons, photons, jets and hadronically decaying $\tau$-leptons with high transverse momenta are searched for as well as a large momentum
-imbalance in the transverse plane and a large total transverse energy.
-The muon trigger chambers are used as well as the calorimeter system with reduced granularity.
-Within less than \mbox{$2.5 \mus$}, Regions-of-Interest~(RoI) are identified in $\eta$-$\phi$-space, which serve as seeds for the decision at the second
-trigger level~(L2).
-
-The high level trigger is composed of the L2 and the Event Filter (EF), both of which are software-based trigger systems.
-At L2, the energy and direction of the RoIs are further investigated and also the types of the trigger objects are analysed.
-Within \mbox{$40 \ms$} a decision is made, and the event rate is reduced to below 3.5~kHz.
-The EF further decreases the rate down to roughly 200~Hz.
-Events passing the EF are stored permanently.
-The full event information is available at the EF level and, hence, energies and directions of the trigger objects are estimated with higher precision
-than at L1 and L2.
-In particular, the discrimination between the different particle types is enhanced by the use of the ID tracking system and calorimeter
-shower shapes.
-
-Selections of different trigger signatures are collected in so-called trigger menus.
-For triggers with very high rates, only a fraction of the triggered events can be selected on a random basis
-in order to perform cross-checks and studies of less rare physics processes.
-The trigger menus are adjusted to the data taking conditions, in particular to the instantaneous luminosity, in order to make optimal use of the
-band width available for storage.
+%Assuming a bunch spacing of \mbox{$25 \ns$} and approximately 20 inelastic interactions per bunch crossing\footnote{As mentioned in Sec.~\ref{sec:LHC}, in 2011 most of the data was taken with a bunch-spacing of \mbox{$50 \ns$}.}, the event rate at the ATLAS detector is
+%of the order of 1~GHz.
+%A three-level trigger system was set up to reduce this rate to about 200~Hz.
+%In 2011 data taking, the real trigger rate was indeed of the order of 300~Hz~\cite{fournier}.
+%The triggers need to suppress minimum bias events very strongly while efficiently selecting rare physics events.
+%The data acquisition system~(DAQ) gathers the data from the different detector subsystems and buffers them until a trigger decision is received.
+%When the event is not rejected by one of the trigger levels, the data are recorded permanently.
+%Fig.~\ref{fig:triggerdaq} shows a sketch of the ATLAS trigger chain indicating the order of magnitude of the trigger rates at the different trigger
+%levels.
+%
+%The first trigger level~(L1) is a hardware-based trigger, which reduces the event rate to approximately 75~kHz.
+%Muons, electrons, photons, jets and hadronically decaying $\tau$-leptons with high transverse momenta are searched for as well as a large momentum
+%imbalance in the transverse plane and a large total transverse energy.
+%The muon trigger chambers are used as well as the calorimeter system with reduced granularity.
+%Within less than \mbox{$2.5 \mus$}, Regions-of-Interest~(RoI) are identified in $\eta$-$\phi$-space, which serve as seeds for the decision at the second
+%trigger level~(L2).
+%
+%The high level trigger is composed of the L2 and the Event Filter (EF), both of which are software-based trigger systems.
+%At L2, the energy and direction of the RoIs are further investigated and also the types of the trigger objects are analysed.
+%Within \mbox{$40 \ms$} a decision is made, and the event rate is reduced to below 3.5~kHz.
+%The EF further decreases the rate down to roughly 200~Hz.
+%Events passing the EF are stored permanently.
+%The full event information is available at the EF level and, hence, energies and directions of the trigger objects are estimated with higher precision
+%than at L1 and L2.
+%In particular, the discrimination between the different particle types is enhanced by the use of the ID tracking system and calorimeter
+%shower shapes.
+%
+%Selections of different trigger signatures are collected in so-called trigger menus.
+%For triggers with very high rates, only a fraction of the triggered events can be selected on a random basis
+%in order to perform cross-checks and studies of less rare physics processes.
+%The trigger menus are adjusted to the data taking conditions, in particular to the instantaneous luminosity, in order to make optimal use of the
+%band width available for storage.
 
