fix bibliography using bbl file directly

--- a/main.tex
+++ b/main.tex
@@ -37,8 +37,8 @@
 \phantomsection
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{bib/thesis}
-\bibliography{bib/thesis}
-
+%\bibliography{bib/thesis}
+\input{main.bbl}
 \clearpage
 
 \listoffigures
